--- a/data/applications.json
+++ b/data/applications.json
@@ -228,6 +228,11 @@
           "title": "covidstatus.com",
           "url": "http://covidstatus.com",
           "description": "CovidStatus - A location-aware app with clean UI that puts you at the center of local covid-19 news with realtime updates."
+        },
+        {
+          "title": "COVID-19 Tracker Ita",
+          "url": "https://polilluminato.github.io/covid19trackerita/",
+          "description": "Charts with the data on the emergency of Codiv-19 in Italy with data provided by the Department of Civil Protection."
         }
       ]
     },
