--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -50,7 +50,8 @@
         "opencovid19-fr/data",
         "covid19india/covid19india",
         "kalisio/covid-19",
-        "OssamaRafique/Corona-Statistics-And-Tracker-Dashboard-Angular-9"
+        "OssamaRafique/Corona-Statistics-And-Tracker-Dashboard-Angular-9",
+        "rfearing/temp-covid-resources"
       ]
     },
     {
