--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -109,7 +109,8 @@
         "duarteocarmo/coronabar",
         "cakebatterandsprinkles/whereiscovid",
         "YogaSakti/CoronaNotifier",
-        "bluebillxp/android-covid19-reportviewer"
+        "bluebillxp/android-covid19-reportviewer",
+        "AaronWard/covidify"
       ]
     },
     {
