--- a/data/interactive-applications.json
+++ b/data/interactive-applications.json
@@ -35,6 +35,11 @@
       "title": "COVID-19 Live Dashboard",
       "url": "https://coronavirus.davidb.dev/",
       "description": "Responsive covid 19 Live data Dashboard with time travel and predictions"
+    },
+    {
+      "title": "COVID-19 Live Dashboard: England",
+      "url": "https://adsp.ai/demos/coronavirus-england/",
+      "description": "COVID-19 Dashboard for England case data including maps"
     }
   ]
 }
