--- a/data/interactive-applications.json
+++ b/data/interactive-applications.json
@@ -37,7 +37,7 @@
       "description": "Responsive covid 19 Live data Dashboard with time travel and predictions"
     },
     {
-      "title": "COVID-19 Live Dashboard: England",
+      "title": "ADSP: COVID-19 Live Dashboard - England",
       "url": "https://adsp.ai/demos/coronavirus-england/",
       "description": "COVID-19 Dashboard for England case data including maps"
     }
