feat: Add covid community tracker

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -110,7 +110,8 @@
         "cakebatterandsprinkles/whereiscovid",
         "YogaSakti/CoronaNotifier",
         "bluebillxp/android-covid19-reportviewer",
-        "AaronWard/covidify"
+        "AaronWard/covidify",
+        "LuisReinoso/covid-19-community-tracker"
       ]
     },
     {
