Add datasets/covid-19 to list of datasets.

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -52,7 +52,8 @@
         "covid19india/covid19india",
         "kalisio/covid-19",
         "OssamaRafique/Corona-Statistics-And-Tracker-Dashboard-Angular-9",
-        "rfearing/temp-covid-resources"
+        "rfearing/temp-covid-resources",
+        "datasets/covid-19"
       ]
     },
     {
