Add nthopinion/covid19 in the list of open source applications

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -112,7 +112,8 @@
         "YogaSakti/CoronaNotifier",
         "bluebillxp/android-covid19-reportviewer",
         "AaronWard/covidify",
-        "LuisReinoso/covid-19-community-tracker"
+        "LuisReinoso/covid-19-community-tracker",
+        "nthopinion/covid19"
       ]
     },
     {
