Add BustByte Coronastatus

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -86,7 +86,8 @@
         "par6n/ncov-19",
         "konradkalemba/korona.ws",
         "ankitchouhan1020/corona",
-        "opencovid19-fr/dashboard"
+        "opencovid19-fr/dashboard",
+        "bustbyte/coronastatus"
       ]
     },
     {
