--- a/data/applications.json
+++ b/data/applications.json
@@ -288,6 +288,11 @@
           "title": "Corona Tracker",
           "url": "https://github.com/PsychoDevs69/CoronaTracker",
           "description": "Open Source project of an Android App for tracking corona virus spread, using public API."
+        },
+        {
+          "title": "Reach4Help",
+          "url": "https://www.reach4help.org",
+          "description": "Connecting Persons In Need with Volunteers in a simple and efficient way"
         }
       ]
     },
