--- a/data/applications.json
+++ b/data/applications.json
@@ -268,6 +268,11 @@
           "title": "contactracing.app",
           "url": "https://contacttracing.app/",
           "description": "Notify your friends & family (and their peers) if you fall ill."
+        },
+        {
+          "title": "CVOID-19 India",
+          "url": "https://covid-19india.netlify.com/",
+          "description": "Covid 19 Tracker for India With Awesome UI + PWA, Made with Svelte"
         }
       ]
     },
