docs: add australia-covid19 site

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -119,7 +119,8 @@
         "LuisReinoso/covid-19-community-tracker",
         "iamrohitsuthar/gocoronago",
         "nthopinion/covid19",
-        "mayukh18/covidexplore"
+        "mayukh18/covidexplore",
+        "nutboltu/australia-covid19"
       ]
     },
     {
