docs: update description

--- a/data/applications.json
+++ b/data/applications.json
@@ -292,7 +292,7 @@
         {
           "title": "australia-covid19.herokuapp.com",
           "url": "https://australia-covid19.herokuapp.com",
-          "description": "Update of COVID -19 Situation in Australia.(Includes new south wales stats)"
+          "description": "Update of COVID-19 Situation in Australia.(Including New south wales situation)"
         }
       ]
     },
