--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -120,7 +120,8 @@
         "iamrohitsuthar/gocoronago",
         "nthopinion/covid19",
         "mayukh18/covidexplore",
-        "nutboltu/australia-covid19"
+        "nutboltu/australia-covid19",
+        "Spiderpig86/sea-to-go"
       ]
     },
     {
