--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -22,7 +22,8 @@
         "lkd70/coronapi",
         "ChrisMichaelPerezSantiago/covid19",
         "AlaeddineMessadi/COVID-19-REPORT-API",
-        "cinemast/covid19-at"
+        "cinemast/covid19-at",
+        "elias-garcia/covid-19-spain"
       ]
     },
     {
