Add Flattening the curve web application

--- a/data/applications.json
+++ b/data/applications.json
@@ -293,6 +293,11 @@
           "title": "australia-covid19.herokuapp.com",
           "url": "https://australia-covid19.herokuapp.com",
           "description": "Update of COVID-19 Situation in Australia.(Including New south wales situation)"
+        },
+        {
+          "title": "Flattening the curve | COVID-19 🦠",
+          "url": "https://flattening-the-curve.commutatus.com",
+          "description": "A simple dashboard to track flattening of the curve by plotting the no.of active COVID-19 / Coronavirus cases over a period of time by countries."
         }
       ]
     },
