--- a/data/applications.json
+++ b/data/applications.json
@@ -293,6 +293,11 @@
           "title": "australia-covid19.herokuapp.com",
           "url": "https://australia-covid19.herokuapp.com",
           "description": "Update of COVID-19 Situation in Australia.(Including New south wales situation)"
+        },
+        {
+          "title": "covintern.com",
+          "url": "https://covintern.com/jobs/",
+          "description": "Internship cancellation tracker and remote internship aggregator for affected students."
         }
       ]
     },
