--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -125,7 +125,8 @@
         "nthopinion/covid19",
         "mayukh18/covidexplore",
         "nutboltu/australia-covid19",
-        "Spiderpig86/sea-to-go"
+        "Spiderpig86/sea-to-go",
+        "nploi/corona_tracker"
       ]
     },
     {
