--- a/data/applications.json
+++ b/data/applications.json
@@ -342,7 +342,7 @@
         {
           "title": "Reach4Help",
           "url": "https://www.reach4help.org",
-          "description": "Connecting Persons In Need with Volunteers in a simple and efficient way"
+          "description": "Connecting Persons In Need with Volunteers in a simple and efficient way."
         }
       ]
     },
