Add Spain covid tracker

--- a/data/applications.json
+++ b/data/applications.json
@@ -308,6 +308,11 @@
           "title": "covintern.com",
           "url": "https://covintern.com/jobs",
           "description": "Internship cancellation tracker and remote internship aggregator for affected students."
+        },
+        {
+          "title": "COVID-2019.es",
+          "url": "http://covid-2019.es/",
+          "description": "Spain coronavirus tracker. Offers daily JSON data parsed from official government sources."
         }
       ]
     },
