open source bluetoth based covid tracing app git repo added

--- a/data/applications.json
+++ b/data/applications.json
@@ -308,6 +308,11 @@
           "title": "covintern.com",
           "url": "https://covintern.com/jobs",
           "description": "Internship cancellation tracker and remote internship aggregator for affected students."
+        },
+        {
+          "title": "Bluetooth corona tracer",
+          "url": "https://github.com/helloworldkr/Bluetooth-ble-beamer-and-scanner-for-tracing-corona-virus-infected-individual",
+          "description": "This is an open source skeleton app similar to Singapore 'Trace Together' app for Covid 19 tracing using ble beacons"
         }
       ]
     },
