--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -91,7 +91,8 @@
         "konradkalemba/korona.ws",
         "ankitchouhan1020/corona",
         "opencovid19-fr/dashboard",
-        "bustbyte/coronastatus"
+        "bustbyte/coronastatus",
+        "reach4help/reach4help"
       ]
     },
     {
