--- a/data/applications.json
+++ b/data/applications.json
@@ -348,6 +348,11 @@
           "title": "Reach4Help",
           "url": "https://www.reach4help.org",
           "description": "Connecting Persons In Need with Volunteers in a simple and efficient way."
+        },
+        {
+          "title": "COVID-19 Tracker for Xamarin.Forms",
+          "url": "https://github.com/anaselhajjaji/covid19.xamarin.forms",
+          "description": "Simple Xamarin.Forms Application for COVID-19 statistics, it shows the differents statistics by countries. Application deployed in: [Microsoft AppCenter](https://install.appcenter.ms/users/elhajjajianas/apps/covid19/distribution_groups/public%20release)"
         }
       ]
     },
