--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -60,7 +60,7 @@
         "nytimes/covid-19-data",
         "cipriancraciun/covid19-datasets",
         "pcm-dpc/COVID-19",
-        "colaboradados/colaboradados.github.io/blob/dev/_posts/2020-03-19-coronavirus.md"
+        "colaboradados/colaboradados.github.io"
       ]
     },
     {
