--- a/data/applications.json
+++ b/data/applications.json
@@ -317,7 +317,7 @@
         {
           "title": "CoronaTab",
           "url": "https://coronatab.app",
-          "description": "Free & Open Source Dashboard + Extension + RESTful API"
+          "description": "Free & Open Source Dashboard + Browser Extension + RESTful API"
         }
       ]
     },
