Add CoronaTab API
https://github.com/PotentialWeb/CoronaTab/wiki/RESTful-API-documentation

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -23,7 +23,8 @@
         "ChrisMichaelPerezSantiago/covid19",
         "AlaeddineMessadi/COVID-19-REPORT-API",
         "cinemast/covid19-at",
-        "elias-garcia/covid-19-spain"
+        "elias-garcia/covid-19-spain",
+        "PotentialWeb/CoronaTab"
       ]
     },
     {
