add Coronavirus Country Comparator (open source dashboard app)

--- a/data/interactive-applications.json
+++ b/data/interactive-applications.json
@@ -27,6 +27,11 @@
       "description": "Dashboard based on maps and graphs, along with scientific documentation."
     },
     {
+      "title": "Coronavirus Country Comparator",
+      "url": "https://boogheta.github.io/coronavirus-countries/",
+      "description": "Rich web interface to control various d3.js visualizations of confirmed and deceased cases data reported by JHU CSSE in all countries."
+    },
+    {
       "title": "COVID-19 Dashboard",
       "url": "https://www.cov19.xyz",
       "description": "Coronavirus outbreak dashboard."
