--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -61,7 +61,8 @@
         "nytimes/covid-19-data",
         "cipriancraciun/covid19-datasets",
         "pcm-dpc/COVID-19",
-        "colaboradados/colaboradados.github.io"
+        "colaboradados/colaboradados.github.io",
+        "jmcastagnetto/covid-19-peru-data"
       ]
     },
     {
