Add p-j-r/covid-19 to models
This is a SIR model for the spread of the Covid-19 virus in a population distribution. It also models a stochastic method for analysing the spread.

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -76,6 +76,7 @@
         "neherlab/covid19_scenarios",
         "Mythobeast/epidemicmodels",
         "institutefordiseasemodeling/covasim"
+        "p-j-r/covid-19"
       ]
     },
     {
