Add CovidKazakhstan repository link to Application and Bots

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -133,7 +133,8 @@
         "Spiderpig86/sea-to-go",
         "nploi/corona_tracker",
         "helloworldkr/Bluetooth-ble-beamer-and-scanner-for-tracing-corona-virus-infected-individual",
-        "boogheta/coronavirus-countries"
+        "boogheta/coronavirus-countries",
+        "onl1ner/CovidKazakhstan"
       ]
     },
     {
