--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -75,7 +75,7 @@
         "midas-network/COVID-19",
         "neherlab/covid19_scenarios",
         "Mythobeast/epidemicmodels",
-        "institutefordiseasemodeling/covasim"
+        "institutefordiseasemodeling/covasim",
         "p-j-r/covid-19"
       ]
     },
