--- a/data/applications.json
+++ b/data/applications.json
@@ -333,6 +333,11 @@
           "title": "COVID-19 Türkiye",
           "url": "https://ozdemirburak.com/koronavirus-haritasi",
           "description": "Coronavirus dashboard and map in Turkish."
+        },
+        {
+          "title": "COVID-19 projects aggregator",
+          "url": "https://covid19projects.now.sh?source=awesome-coronavirus-github",
+          "description": "COVID-19 projects in one place"
         }
       ]
     },
