Adds epidemic and hospital models for Brazil.
Adds epidemic and hospitalization models focused in Brazil. This is being developed by the analytics teams of Funcional Health Tech, a Brazilian company that provides solutions for healthcare providers and other health industry players.

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -68,6 +68,7 @@
     {
       "category": "Models",
       "repositories": [
+        "funcional-health-analytics/covid19-analytics",
         "HopkinsIDD/ncov_incubation",
         "coronafighter/coronaSEIR",
         "pennsignals/chime",
