Add Data science Against Corona metadata repo
This is a curated repository of relevant secondary data sources for country-level analysis

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -64,7 +64,8 @@
         "colaboradados/colaboradados.github.io",
         "jmcastagnetto/covid-19-peru-data",
         "ieee8023/covid-chestxray-dataset",
-        "FoldingAtHome/coronavirus"
+        "FoldingAtHome/coronavirus",
+        "cjvanlissa/COVID19_metadata"
       ]
     },
     {
