Add AlaeddineMessadi/COVID-19-REPORT-DASHBOARD statistics repository + Stats-coronavirus.com

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -65,6 +65,7 @@
         "jmcastagnetto/covid-19-peru-data",
         "ieee8023/covid-chestxray-dataset",
         "FoldingAtHome/coronavirus",
+        "AlaeddineMessadi/COVID-19-REPORT-DASHBOARD",
         "cjvanlissa/COVID19_metadata"
       ]
     },
