--- a/data/applications.json
+++ b/data/applications.json
@@ -5,6 +5,11 @@
       "category": "Web Apps",
       "list": [
         {
+          "title": "stats-coronavirus.com",
+          "url": "https://stats-coronavirus.com",
+          "description": "STATS-CORONAVIRUS.com is an open source project that aims to collect data about the Novel Cornavirus. It acts as a portal for the public to keep track of the latest analytics and news development about the COVID-19"
+        },
+        {
           "title": "coronatracker.com",
           "url": "https://www.coronatracker.com",
           "description": "CORONATRACKER.com is a community-based project powered by over 460 volunteers from across the globe, ranging from data scientists, medical professionals, UI/UX designers, fullstack developers, to the general public."
