Add COVID19-ES-Py - API

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -26,6 +26,7 @@
         "elias-garcia/covid-19-spain",
         "PotentialWeb/CoronaTab",
         "ryo-ma/covid19-japan-web-api"
+        "AtilioA/COVID19-ES-Py"
       ]
     },
     {
