--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -25,7 +25,7 @@
         "cinemast/covid19-at",
         "elias-garcia/covid-19-spain",
         "PotentialWeb/CoronaTab",
-        "ryo-ma/covid19-japan-web-api"
+        "ryo-ma/covid19-japan-web-api",
         "AtilioA/COVID19-ES-Py"
       ]
     },
