Added New Application
Added Properly

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -146,7 +146,8 @@
         "helloworldkr/Bluetooth-ble-beamer-and-scanner-for-tracing-corona-virus-infected-individual",
         "boogheta/coronavirus-countries",
         "onl1ner/CovidKazakhstan",
-        "dabigjoe6/react-native-covid19"
+        "dabigjoe6/react-native-covid19",
+        "varundeva/CoronaTracker"
       ]
     },
     {
