Added MeFee application

--- a/data/applications.json
+++ b/data/applications.json
@@ -384,6 +384,11 @@
           "url": "https://github.com/anaselhajjaji/covid19.xamarin.forms",
           "description": "Simple Xamarin.Forms Application for COVID-19 statistics, it shows the differents statistics by countries. Application deployed in: [Microsoft AppCenter](https://install.appcenter.ms/users/elhajjajianas/apps/covid19/distribution_groups/public%20release)"
         }
+                {
+          "title": "MeFee Temp Tracker",
+          "url": "https://mefee.org",
+          "description": "MeFee lets you easily track your temperature to build up baseline data so that you can get personalized early warning notifications if your temperature is out of your normal range."
+        }
       ]
     },
     {
