Adds an API for Google Community mobility repots

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -26,7 +26,8 @@
         "elias-garcia/covid-19-spain",
         "PotentialWeb/CoronaTab",
         "ryo-ma/covid19-japan-web-api",
-        "AtilioA/COVID19-ES-Py"
+        "AtilioA/COVID19-ES-Py",
+        "pastelsky/covid-19-mobility-tracker"
       ]
     },
     {
