Adding FAQs dataset

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -69,7 +69,8 @@
         "ieee8023/covid-chestxray-dataset",
         "FoldingAtHome/coronavirus",
         "cjvanlissa/COVID19_metadata",
-        "AlaeddineMessadi/COVID-19-REPORT-DASHBOARD"
+        "AlaeddineMessadi/COVID-19-REPORT-DASHBOARD",
+        "hmpandey/CoronaQs"
       ]
     },
     {
