--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -27,7 +27,8 @@
         "PotentialWeb/CoronaTab",
         "ryo-ma/covid19-japan-web-api",
         "AtilioA/COVID19-ES-Py",
-        "pastelsky/covid-19-mobility-tracker"
+        "pastelsky/covid-19-mobility-tracker",
+        "Laeyoung/COVID-19-API"
       ]
     },
     {
