--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -151,6 +151,7 @@
         "onl1ner/CovidKazakhstan",
         "dabigjoe6/react-native-covid19",
         "varundeva/CoronaTracker"
+        "destructo570/CovidTracker"
       ]
     },
     {
