Add Korono repository

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -95,7 +95,8 @@
     {
       "category": "Learning",
       "repositories": [
-        "mattroconnor/deep_learning_coronavirus_cure"
+        "mattroconnor/deep_learning_coronavirus_cure",
+        "jbesomi/Korono"
       ]
     },
     {
