--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -150,7 +150,7 @@
         "boogheta/coronavirus-countries",
         "onl1ner/CovidKazakhstan",
         "dabigjoe6/react-native-covid19",
-        "varundeva/CoronaTracker"
+        "varundeva/CoronaTracker",
         "destructo570/CovidTracker"
       ]
     },
