--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -152,7 +152,8 @@
         "onl1ner/CovidKazakhstan",
         "dabigjoe6/react-native-covid19",
         "varundeva/CoronaTracker",
-        "destructo570/CovidTracker"
+        "destructo570/CovidTracker",
+        "bluesquare-io/covid-19-app"
       ]
     },
     {
