--- a/data/applications.json
+++ b/data/applications.json
@@ -353,6 +353,11 @@
           "title": "CoronaBoard",
           "url": "https://corona-board.soaple.endpoint.ainize.ai/",
           "description": "Global dashboard for monitoring Corona virus(COVID-19) powered by [StickyBoard](https://github.com/soaple/stickyboard/) open source project."
+        },
+        {
+          "title": "Corona Virüsü Bilgilendirme Merkezi",
+          "url": "https://kov19.com",
+          "description": "Coronavirus dashboard and map in Turkish. Also include other informations."
         }
       ]
     },
