--- a/data/interactive-applications.json
+++ b/data/interactive-applications.json
@@ -50,6 +50,11 @@
       "title": "Coronavirus Country Comparator",
       "url": "https://boogheta.github.io/coronavirus-countries",
       "description": "Rich web interface to control various d3.js visualizations of confirmed and deceased cases data reported by JHU CSSE in all countries."
+    },
+    {
+      "title": "Covid-19 Charts",
+      "url": "https://corona.njoyard.fr",
+      "description": "Visualization tool for JHU CSSE Covid-19 data using EmberJS and Chart.js"
     }
   ]
 }
