--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -153,7 +153,8 @@
         "dabigjoe6/react-native-covid19",
         "varundeva/CoronaTracker",
         "destructo570/CovidTracker",
-        "bluesquare-io/covid-19-app"
+        "bluesquare-io/covid-19-app",
+        "njoyard/corona"
       ]
     },
     {
