--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -156,7 +156,8 @@
         "destructo570/CovidTracker",
         "bluesquare-io/covid-19-app",
         "calpt/CoronaPandemicBot",
-        "njoyard/corona"
+        "njoyard/corona",
+        "LeafyCode/survive-together-web"
       ]
     },
     {
