Added API repo for covid19india

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -29,7 +29,8 @@
         "AtilioA/COVID19-ES-Py",
         "pastelsky/covid-19-mobility-tracker",
         "Laeyoung/COVID-19-API",
-        "alegoritma/covid-19-lite"
+        "alegoritma/covid-19-lite",
+        "covid19india/api"
       ]
     },
     {
