--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -74,7 +74,8 @@
         "FoldingAtHome/coronavirus",
         "cjvanlissa/COVID19_metadata",
         "AlaeddineMessadi/COVID-19-REPORT-DASHBOARD",
-        "hmpandey/CoronaQs"
+        "hmpandey/CoronaQs",
+        "github/covid19-dashboard"
       ]
     },
     {
