fix #242 : add new item covid19-kerala-api to open-source-projects API category

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -30,7 +30,8 @@
         "pastelsky/covid-19-mobility-tracker",
         "Laeyoung/COVID-19-API",
         "alegoritma/covid-19-lite",
-        "covid19india/api"
+        "covid19india/api",
+        "yedhink/covid19-kerala-api"
       ]
     },
     {
