--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -94,7 +94,8 @@
         "p-j-r/covid-19",
         "funcional-health-analytics/covid19-analytics",
         "WARMTeam/CoVid19",
-        "ImperialCollegeLondon/covid19model"
+        "ImperialCollegeLondon/covid19model",
+        "microprediction/pandemic"
       ]
     },
     {
