--- a/data/applications.json
+++ b/data/applications.json
@@ -368,6 +368,11 @@
           "title": "covid19dashboards",
           "url": "https://covid19dashboards.com",
           "description": "an accessible way for data professionals to share dashboards (that are updated with new data automatically) without requiring any expertise in front-end development."
+        },
+        {
+          "title": "Corona Info - India",
+          "url": "https://coronavirusapp.github.io",
+          "description": "Coronavirus Mobile Dashboard for India - Live Statistics (Refreshes every minute) | Helpline Numbers | Risks & Precautions"
         }
       ]
     },
