--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -126,7 +126,8 @@
         "mayukh18/covidexplore",
         "nutboltu/australia-covid19",
         "Spiderpig86/sea-to-go",
-        "nploi/corona_tracker"
+        "nploi/corona_tracker",
+        "Druhin13/corona"
       ]
     },
     {
