--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -186,7 +186,8 @@
         "sagarkarira/coronavirus-tracker-cli",
         "garrylachman/covid19-cli",
         "MouadBH/coronapy-cli",
-        "soroushchehresa/cli-corona"
+        "soroushchehresa/cli-corona",
+        "asprazz/covid19-cli"
       ]
     },
     {
