Add COVID19 Selfie Mask Image Dataset

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -77,7 +77,8 @@
         "AlaeddineMessadi/COVID-19-REPORT-DASHBOARD",
         "hmpandey/CoronaQs",
         "github/covid19-dashboard",
-        "sebaxtian/colombia_covid_19_pipe"
+        "sebaxtian/colombia_covid_19_pipe",
+        "UniversalDataTool/coronavirus-mask-image-dataset"
       ]
     },
     {
