Added covid-in CLI app

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -188,7 +188,8 @@
         "garrylachman/covid19-cli",
         "MouadBH/coronapy-cli",
         "soroushchehresa/cli-corona",
-        "asprazz/covid19-cli"
+        "asprazz/covid19-cli",
+        "aayush-jaiswal/covid-in"
       ]
     },
     {
