--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -164,7 +164,8 @@
         "calpt/CoronaPandemicBot",
         "njoyard/corona",
         "LeafyCode/survive-together-web",
-        "Druhin13/corona"
+        "Druhin13/corona",
+        "shaunsaker/covid-19-south-africa-app"
       ]
     },
     {
