--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -118,7 +118,8 @@
         "ankitchouhan1020/corona",
         "opencovid19-fr/dashboard",
         "bustbyte/coronastatus",
-        "reach4help/reach4help"
+        "reach4help/reach4help",
+        "Polunom/covid-inc"
       ]
     },
     {
