Add COVID-19 open Go API

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -31,7 +31,8 @@
         "Laeyoung/COVID-19-API",
         "alegoritma/covid-19-lite",
         "covid19india/api",
-        "yedhink/covid19-kerala-api"
+        "yedhink/covid19-kerala-api",
+        "slotix/COVID-19"
       ]
     },
     {
