Update description of existing model p-j-r/covid19
Stochastic SIR models, adding age-structures and social contact data for the spread of covid-19.
Also proposing a lattice model for identifying and isolating hotspots.

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -92,11 +92,11 @@
         "neherlab/covid19_scenarios",
         "Mythobeast/epidemicmodels",
         "institutefordiseasemodeling/covasim",
-        "p-j-r/covid-19",
         "funcional-health-analytics/covid19-analytics",
         "WARMTeam/CoVid19",
         "ImperialCollegeLondon/covid19model",
-        "microprediction/pandemic"
+        "microprediction/pandemic",
+        "p-j-r/covid-19"
       ]
     },
     {
