Adding a new repo in open source category
Linked project is a full stack framework to trace possible close-contact candidates within last 14/21 days for an already detected covid-19 positive patient. Useful especially for government.

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -168,6 +168,7 @@
         "LeafyCode/survive-together-web",
         "Druhin13/corona",
         "shaunsaker/covid-19-south-africa-app"
+        "hissain/CoronaTracker"
       ]
     },
     {
