Adding mistakenly missing semicolon

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -167,7 +167,7 @@
         "njoyard/corona",
         "LeafyCode/survive-together-web",
         "Druhin13/corona",
-        "shaunsaker/covid-19-south-africa-app"
+        "shaunsaker/covid-19-south-africa-app",
         "hissain/CoronaTracker"
       ]
     },
