--- a/data/applications.json
+++ b/data/applications.json
@@ -378,6 +378,11 @@
           "title": "nCovid-19",
           "url" : "https://ncovid-19.live",
           "description": "Real-time worldwide and India(state-wise) Covid-19 statistics along with map."
+        },
+        {
+          "title": "Track a Virus: COVID-19 Dashboard",
+          "url": "https://trackavirus.app/",
+          "description": "Dashboard for comparing countries and analysing daily increases. Open for contributions. Has an extensive roadmap."
         }
       ]
     },
