--- a/data/applications.json
+++ b/data/applications.json
@@ -392,7 +392,7 @@
         {
           "title": "COVID-19 Italy Monitor",
           "url": "https://covidashit.herokuapp.com",
-          "description": "Real-time eng/ita dashboard to monitor the COVID-19 outbreak in Italy, using the dataset provided by the Italian Department of Civil Protection.
+          "description": "Real-time eng/ita dashboard to monitor the COVID-19 outbreak in Italy, using the dataset provided by the Italian Department of Civil Protection."
         },
         {
           "title": "Track a Virus: COVID-19 Dashboard",
