--- a/data/applications.json
+++ b/data/applications.json
@@ -396,7 +396,7 @@
         },
         {
           "title": "COVID19 Tracker - India",
-          "url": "https://pajaydev.github.io/covid19-india/",
+          "url": "https://pajaydev.github.io/covid19-india",
           "description": "Real time visualization of number of Covid19 cases across all state and districts in India."
         }
       ]
