--- a/data/applications.json
+++ b/data/applications.json
@@ -378,6 +378,11 @@
           "title": "nCovid-19",
           "url" : "https://ncovid-19.live",
           "description": "Real-time worldwide and India(state-wise) Covid-19 statistics along with map."
+        },
+        {
+          "title": "Covid Data Live",
+          "url" : "https://coviddata.live",
+          "description": "Live coronavirus dashboard. See data, maps, social media trends, and learn about prevention measures."
         }
       ]
     },
