--- a/data/applications.json
+++ b/data/applications.json
@@ -488,6 +488,11 @@
           "title": "Coronavírus - SUS",
           "url": "https://apps.apple.com/br/app/coronav%C3%ADrus-sus/id1408008382",
           "description": "O Ministério da Saúde lança o app Coronavírus-SUS com o objetivo de conscientizar a população sobre o Corona Vírus COVID-19."
+        },
+        {
+          "title": "Covid-19 Tracker",
+          "url": "https://coronatrends.live",
+          "description": "A Chrome and Firefox browser popup utility to show countries and states stats with notifications related to increase in global confirmed cases"
         }
       ]
     }
