Add the WHO COVID-19 app

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -169,7 +169,8 @@
         "LeafyCode/survive-together-web",
         "Druhin13/corona",
         "shaunsaker/covid-19-south-africa-app",
-        "hissain/CoronaTracker"
+        "hissain/CoronaTracker",
+        "WorldHealthOrganization/app"
       ]
     },
     {
