--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,3 @@
 theme: jekyll-theme-cayman
-plugins:
-  - jekyll-relative-links
-relative_links:
-  enabled: true
-  collections: true
-include:
-  - README.md
+title: Awesome Coronavirus
+description: 🦠Useful projects and resources for COVID-19 (2019 novel Coronavirus)
